fix receptor
