# src/Contexts/Heroes/Hero/Domain/interfaces/Hero.interface.ts
@@ -6,6 +6,10 @@ export interface IHeroRepository {
 
     findById(gameId: number): Promise<Hero | null>;
 
+    findByPlayerWorld(Id: string, world: number): Promise<Hero[] | null>;
+
+    findByPlayerTopFive(Id: string): Promise<Hero[] | null>;
+
     findByRace(race: number, id: string): Promise<Hero[] | null>;
 
     IsThereAnyHeroInQueue(id: string, inQueue: boolean): Promise<number>;
